@@ -401,7 +401,7 @@ AC_CHECK_GMP
 
 if test x"$have_gmp" = xno
 then
-  AC_MSG_ERROR([Cannot find GMP version 4.1.2 or higher.
+  AC_MSG_ERROR([Cannot find GMP version 4.1.3 or higher.
 GMP is the GNU Multi-Precision library:
 see http://www.swox.com/gmp/ for more information.
 When compiling the GMP library, do not forget to enable the C++ interface:
@@ -623,7 +623,7 @@ if test x"$gmp_supports_exceptions" = xno
 then
   AC_MSG_WARN([CANNOT PROPAGATE EXCEPTIONS BACK FROM GMP:
 *** MEMORY EXHAUSTION MAY RESULT IN ABRUPT TERMINATION.
-*** If you are using g++, make sure you use version 4.1.2 or higher
+*** If you are using g++, make sure you use version 4.1.3 or higher
 *** and use a version of GMP compiled with the option -fexceptions.
 *** To build such a version, you can configure GMP as follows:
 *** CPPFLAGS=-fexceptions ./configure --enable-cxx --prefix=/usr/local])
